#
# Copyright 2019 Ettus Research, a National Instruments Brand
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

# List all header files here
install(
    FILES
    specinvert_block_control.hpp
    specinvert_block_control.hpp
    config.hpp
    #my_block_control.hpp
    DESTINATION include/rfnoc/specinvert
    COMPONENT headers
)
